# candlz

./: .gitignore  README.md  package-lock.json  package.json  prompt.txt  serve-docs.bat  serve-docs.sh
.claude/: settings.local.json
backend/: BACKEND_SUMMARY.md  MARKET_ENGINE_COMPLETION_SUMMARY.md  candlz_game.db-shm  candlz_game.db-wal  main.py  pyproject.toml  requirements.txt  test_backend.py  test_enhanced_integration.py  test_market_manager.py
backend/api/: assets.py  data.py  players.py  status.py  trading.py
backend/core/: config.py  database.py  models.py  schemas.py
backend/market-engine/: init.py
backend/market-engine/manager/: MarketEngineManager.py  MarketEngineManager_fixed.py  market_engine_service.py
backend/market_engine/: __init__.py  random_walk.py
backend/market_engine/manager/: MarketEngineManager.py  __init__.py
backend/services/: database_service.py  initialization_service.py
backend/tests/: test_backend.py  test_complete_market_system.py  test_enhanced_random_walk_integration.py  test_market_integration.py  test_market_manager.py  test_random_walk_direct.py
docs/: README.md  _coverpage.md  _sidebar.md  getting-started.md  index.html  local-development.md  roadmap.md
docs/architecture/: backend-api.md  data-flow.md  frontend-components.md  save-system.md  summary.md  system-overview.md
frontend/: DEVELOPMENT_SUMMARY.md  FRONTEND_README.md  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js  tsconfig.json  tsconfig.node.json
(+51 files in other folders)
